--- a/style.css
+++ b/style.css
@@ -832,7 +832,7 @@ button img {
     font-size: 18px;
     font-weight: 400;
     line-height: 30px;
-    text-align: left;
+
     
 }
 
@@ -841,15 +841,42 @@ button img {
     font-weight: 400;
     line-height: 20px;
     letter-spacing: -0.02em;
-    text-align: left;
-    
     width: 128px;
     margin-bottom: 15px; /* Дополнительный отступ между элементами, если требуется */
 }
-.ProductList h3 {
-    margin-bottom: 23px; /* Дополнительный отступ между элементами, если требуется */
+/* Стили для <span> внутри первого блока .ProductList */
+.ProductList:nth-of-type(2) span:first-of-type {
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 21.78px;
+}
+
+/* Стили для <span> внутри второго блока .ProductList */
+.ProductList:nth-of-type(3) span:first-of-type {
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 21.78px;
+}
+
+/* Стили для <span> внутри третьего блока .ProductList */
+.ProductList:nth-of-type(4) span:first-of-type {
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 21.78px;
+}
+
+/* Стили для <h3> внутри последнего блока .ProductList */
+.ProductList:last-child h3 {
+    font-size: 28px;
+    font-weight: 700;
+    line-height: 36px;
+    margin-bottom: 23px;
+}
+.highlight {
+    color: rgba(255, 228, 146, 1);
 }
 .ProductList:last-child p {
+    
     margin-bottom: 23px; 
 }
 .ProductList button{
@@ -862,14 +889,22 @@ button img {
     line-height: 23px;
     margin-bottom: 67px;
 }
+
 .BorderLast{
     width: 100%;
     border: 1px solid rgba(46, 78, 115, 1)
 }
 
+.BorderLast1{
+    display: none;
+    width: 100%;
+    border: 1px solid rgba(46, 78, 115, 1)
+}
 
-
-
+.LinkConteiner{
+    padding: 16px calc(1.5vw  + 11.259px);
+    background: rgba(4, 56, 115, 1);
+}
 .last-content {
     display: flex;
     gap: 494px; 
@@ -886,17 +921,15 @@ button img {
 .linkS img{
     margin-right: 10px;
 }
-/* Стили для LogoS */
 .LogoS {
     display: flex;
-    gap: 32px; /* Отступ между элементами в 32px */
-    align-items: center; /* Выравнивание элементов по центру по вертикали */
+    gap: 32px; 
+    align-items: center; 
 }
 
-/* Выравнивание элементов внутри linkS по центру по вертикали */
 .linkS  div {
     display: flex;
-    align-items: center; /* Выравнивание элементов по центру по вертикали */
+    align-items: center; 
 }
 
 
@@ -1009,6 +1042,32 @@ button img {
     .wrapper {
         display: block;
     }
+
+
+    .Product {
+        flex-direction: column;
+        align-items: center;
+        gap: 40px;
+    }
+
+    .ProductList {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .ProductList p, .ProductList span {
+        margin-bottom: 10px;
+    }
+
+    .ProductList button {
+        width: 241px;
+        height: 63px;
+        margin-bottom: 40px; 
+    }
+
     .text-content {
         display: flex;
         flex-direction: column;
@@ -1030,4 +1089,27 @@ button img {
             align-items: flex-start;
             justify-content: center;
         }
+        .last-content {
+            flex-direction: column;
+            align-items: center;
+            gap: 40px; 
+        }
+    
+        .linkS {
+            flex-direction: column; 
+            gap: 20px; 
+            align-items: center; 
+        }
+        .BorderLast{
+            display: none;
+            width: 100%;
+            border: 1px solid rgba(46, 78, 115, 1)
+        }
+        
+        .BorderLast1{
+            display: block;
+            width: 100%;
+            border: 1px solid rgba(46, 78, 115, 1)
+        }
+    
 }
