--- a/style.css
+++ b/style.css
@@ -550,7 +550,9 @@ border-radius: 30px;
     color: rgba(33, 37, 41, 1);
     border: 1px solid rgba(255, 228, 146, 1);
 }
-
+.splide__sr{
+    display: none;
+}
 
 
 
