--- a/style.css
+++ b/style.css
@@ -502,7 +502,7 @@
     display: flex;
     flex-direction: column; 
     gap: 25px; 
-    font-size: 18px; 
+    font-size: calc(0.2vw +  15.407px);
     margin-bottom: 25px;
 }
 
