--- a/style.css
+++ b/style.css
@@ -11,9 +11,9 @@
 }
 .header-content{
     display: flex;
-
     align-items: center;
     justify-content: space-between;
+    gap: 30px;
 }
 .logo{
     width: 100%;
@@ -83,9 +83,10 @@
 
 .All{
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
+    gap: 60px;
 }
 .Project {
     display: flex;
@@ -94,7 +95,7 @@
 
 }
 .Project h1{
-    width: calc(31.1vw  + 178.963px);
+    width: calc(24vw  + 140px);
     font-size: calc(2.6vw  + 27.704px);
     font-weight: 700;
     line-height: calc(3.1vw  + 33.531px);
@@ -103,7 +104,7 @@
     
 }
 .Project p{
-    width: calc(31.1vw  + 178.963px);
+    width: calc(24vw  + 140px);
     font-size: 18px;
     font-weight: 400;
     line-height: 30px;
@@ -123,7 +124,6 @@
     color: #fff;
     border: none;
     cursor: pointer;
-    margin-bottom: 60px;
 }
 .cube{
     width: 100%;
@@ -275,7 +275,7 @@
 }
 
 .feature-info h2 {
-    width: calc(24.4vw + 209.778px);
+    width: calc(24vw + 140px);
     font-size: calc(2.6vw + 27.704px);
     font-weight: 700;
     line-height: calc(3.1vw + 33.531px);
@@ -294,7 +294,7 @@
 }
 
 .feature-info p {
-    width: calc(24.4vw + 209.778px);
+    width: calc(24vw + 140px);
     font-size: 18px;
     font-weight: 400;
     line-height: 30px;
@@ -315,7 +315,6 @@
     color: #fff;
     border: none;
     cursor: pointer;
-    margin-bottom: 60px;
 }
 
 .feature-image {
@@ -350,7 +349,7 @@
 }
 .Customise-info h2 {
     position: relative;
-    width: calc(24.4vw + 209.778px);
+    width: calc(24vw + 140px);
     font-size: calc(2.6vw + 27.704px);
     font-weight: 700;
     line-height: calc(3.1vw + 33.531px);
@@ -368,7 +367,7 @@
 }
 
 .Customise-info p {
-    width: calc(24.4vw + 209.778px);
+    width: calc(24vw + 140px);
     font-size: 18px;
     font-weight: 400;
     line-height: 30px;
@@ -704,7 +703,7 @@
 
 }
 
-button {
+.text-content  button {
     display: inline-flex;
     justify-content: center;
     align-items: center;
