--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
 .menu{
     display: none;
 }
-.LinkButton{
+.dropdown-menu{
     display: flex;
     gap: 75px;
 }
@@ -49,6 +49,11 @@
     font-weight: 500;
     line-height: 23px;
     color: rgba(4, 56, 115, 1);
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 23px;
+    border: none;
+    cursor: pointer;
 }
 .ProjectButton{
     display: inline-flex;
@@ -64,6 +69,74 @@
     color: #fff;
     border: none;
     cursor: pointer;
+}
+
+.menu-toggle {
+    display: none; 
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 20px;
+    cursor: pointer;
+}
+
+.menu-toggle .bar {
+    width: 30px;
+    height: 3px;
+    background-color: #fff;
+    margin: 3px 0;
+    transition: 0.3s;
+}
+
+
+@media (max-width: 900px) {
+    .menu-toggle {
+        display: flex;
+    }
+
+    .dropdown-menu {
+        display: none;
+        position: absolute;
+        top: 60px; 
+        right: 0;
+        background-color: rgba(4, 56, 115, 1);
+        width: 100vw; 
+        padding: 20px;
+        z-index: 1000; 
+        
+    }
+
+    .menu-open .dropdown-menu {
+        display: flex; 
+        flex-direction: column;
+        justify-content: center; 
+        align-items: center; 
+    }
+
+    .nav-links, .buttons {
+        display: flex;
+        flex-direction: column;
+        align-items: center; 
+        gap: 20px; 
+    }
+
+    .buttons {
+        margin-top: 20px; 
+    }
+}
+
+/* Анимации бургер-меню */
+.menu-open .menu-toggle .bar:nth-child(1) {
+    transform: rotate(-45deg) translate(-5px, 5px);
+}
+
+.menu-open .menu-toggle .bar:nth-child(2) {
+    opacity: 0;
+}
+
+.menu-open .menu-toggle .bar:nth-child(3) {
+    transform: rotate(45deg) translate(-3px, -6px);
 }
 
 
