--- a/style.css
+++ b/style.css
@@ -125,8 +125,9 @@
         margin-top: 20px; 
     }
 }
-
-/* Анимации бургер-меню */
+.dropdown-menu .ProjectButton {
+    display: none;
+}
 .menu-open .menu-toggle .bar:nth-child(1) {
     transform: rotate(-45deg) translate(-5px, 5px);
 }
